Handle failures in CSC conflict resolution
Fixes #1253