@@ -22,6 +22,7 @@ import org.workcraft.utils.PackageUtils;
 import org.workcraft.utils.WorkspaceUtils;
 import org.workcraft.workspace.WorkspaceEntry;
 
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.util.HashSet;
 import java.util.Set;
@@ -33,6 +34,12 @@ class SynthesisCommandsTests {
         final Framework framework = Framework.getInstance();
         framework.init();
         AtacsSettings.setCommand(BackendUtils.getTemplateToolPath("ATACS", "atacs"));
+    }
+
+    @Test
+    void irreducibleConflictComplexGateSynthesis() {
+        String workName = PackageUtils.getPackagePath(getClass(), "irreducible_conflict.stg.work");
+        testComplexGateSynthesisCommand(workName, null);
     }
 
     @Test
@@ -77,10 +84,12 @@ class SynthesisCommandsTests {
         testComplexGateSynthesisCommand(workName, 4);
     }
 
-    private void testComplexGateSynthesisCommand(String workName, int expectedGateCount) {
+    private void testComplexGateSynthesisCommand(String workName, Integer expectedGateCount) {
         try {
             checkSynthesisCommand(ComplexGateSynthesisCommand.class, workName, expectedGateCount);
-        } catch (DeserialisationException | InstantiationException | IllegalAccessException e) {
+        } catch (DeserialisationException | InstantiationException | IllegalAccessException
+                | NoSuchMethodException | InvocationTargetException e) {
+
             e.printStackTrace();
         }
     }
@@ -127,10 +136,12 @@ class SynthesisCommandsTests {
         testGeneralisedCelementSynthesisCommand(workName, 4);
     }
 
-    private void testGeneralisedCelementSynthesisCommand(String workName, int expectedGateCount) {
+    private void testGeneralisedCelementSynthesisCommand(String workName, Integer expectedGateCount) {
         try {
             checkSynthesisCommand(GeneralisedCelementSynthesisCommand.class, workName, expectedGateCount);
-        } catch (DeserialisationException | InstantiationException | IllegalAccessException e) {
+        } catch (DeserialisationException | InstantiationException | IllegalAccessException
+                | NoSuchMethodException | InvocationTargetException e) {
+
             e.printStackTrace();
         }
     }
@@ -177,24 +188,19 @@ class SynthesisCommandsTests {
         testStandardCelementSynthesisCommand(workName, 18);
     }
 
-    private void testStandardCelementSynthesisCommand(String workName, int expectedGateCount) {
+    private void testStandardCelementSynthesisCommand(String workName, Integer expectedGateCount) {
         try {
             checkSynthesisCommand(StandardCelementSynthesisCommand.class, workName, expectedGateCount);
-        } catch (DeserialisationException | InstantiationException | IllegalAccessException e) {
+        } catch (DeserialisationException | InstantiationException | IllegalAccessException
+                | NoSuchMethodException | InvocationTargetException e) {
+
             e.printStackTrace();
         }
     }
 
     private <C extends AbstractSynthesisCommand> void checkSynthesisCommand(Class<C> cls, String workName,
-            int expectedComponentCount)
-            throws DeserialisationException, InstantiationException, IllegalAccessException {
-
-        checkSynthesisCommand(cls, workName, expectedComponentCount, expectedComponentCount);
-    }
-
-    private <C extends AbstractSynthesisCommand> void checkSynthesisCommand(Class<C> cls, String workName,
-            int minComponentCount, int maxComponentCount)
-            throws DeserialisationException, InstantiationException, IllegalAccessException {
+            Integer expectedComponentCount) throws DeserialisationException, InstantiationException,
+            IllegalAccessException, NoSuchMethodException, InvocationTargetException {
 
         final Framework framework = Framework.getInstance();
         final ClassLoader classLoader = ClassLoader.getSystemClassLoader();
@@ -215,40 +221,43 @@ class SynthesisCommandsTests {
             }
         }
 
-        C command = cls.newInstance();
+        C command = cls.getDeclaredConstructor().newInstance();
         WorkspaceEntry dstWe = command.execute(srcWe);
-        Circuit dstCircuit = WorkspaceUtils.getAs(dstWe, Circuit.class);
-        Set<String> dstInputs = new HashSet<>();
-        Set<String> dstOutputs = new HashSet<>();
-        // Process primary ports
-        for (Contact port: dstCircuit.getPorts()) {
-            String dstSignal = dstCircuit.getNodeReference(port);
-            if (port.isInput()) {
-                dstInputs.add(dstSignal);
-            }
-            if (port.isOutput()) {
-                dstOutputs.add(dstSignal);
-            }
-        }
-        // Process environment pins
-        Set<String> dstPageRefs = new HashSet<>();
-        for (PageNode page: Hierarchy.getChildrenOfType(dstCircuit.getRoot(), PageNode.class)) {
-            for (Contact port: dstCircuit.getPorts()) {
-                if (port.getParent() == page) {
-                    dstPageRefs.add(dstCircuit.getNodeReference(page));
-                    break;
+        if (expectedComponentCount == null) {
+            Assertions.assertNull(dstWe);
+        } else {
+            Circuit dstCircuit = WorkspaceUtils.getAs(dstWe, Circuit.class);
+            Set<String> dstInputs = new HashSet<>();
+            Set<String> dstOutputs = new HashSet<>();
+            // Process primary ports
+            for (Contact port : dstCircuit.getPorts()) {
+                String dstSignal = dstCircuit.getNodeReference(port);
+                if (port.isInput()) {
+                    dstInputs.add(dstSignal);
+                }
+                if (port.isOutput()) {
+                    dstOutputs.add(dstSignal);
                 }
             }
-        }
-        Set<String> dstMutexes = getMutexComponentReferences(dstCircuit);
-        int dstComponentCount = dstCircuit.getFunctionComponents().size();
+            // Process environment pins
+            Set<String> dstPageRefs = new HashSet<>();
+            for (PageNode page : Hierarchy.getChildrenOfType(dstCircuit.getRoot(), PageNode.class)) {
+                for (Contact port : dstCircuit.getPorts()) {
+                    if (port.getParent() == page) {
+                        dstPageRefs.add(dstCircuit.getNodeReference(page));
+                        break;
+                    }
+                }
+            }
+            Set<String> dstMutexes = getMutexComponentReferences(dstCircuit);
+            int dstComponentCount = dstCircuit.getFunctionComponents().size();
 
-        Assertions.assertEquals(srcInputs, dstInputs);
-        Assertions.assertEquals(srcOutputs, dstOutputs);
-        Assertions.assertEquals(srcMutexes, dstMutexes);
-        Assertions.assertTrue(minComponentCount <= dstComponentCount);
-        Assertions.assertTrue(maxComponentCount >= dstComponentCount);
-        Assertions.assertEquals(srcPageRefs, dstPageRefs);
+            Assertions.assertEquals(srcInputs, dstInputs);
+            Assertions.assertEquals(srcOutputs, dstOutputs);
+            Assertions.assertEquals(srcMutexes, dstMutexes);
+            Assertions.assertEquals(expectedComponentCount, dstComponentCount);
+            Assertions.assertEquals(srcPageRefs, dstPageRefs);
+        }
     }
 
     private static Set<String> getMutexComponentReferences(Circuit circuit) {
